--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "generate-unique-id": "^2.0.3",
     "mongoose": "^8.2.4",
